Frankbelford/uatv1ba/force-app/main/default/objects/Case__c/fields/Assigned_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Assigned To (Contact))</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>