Frankbelford/uatv1ba/force-app/main/default/objects/Case__c/fields/Assigned_To_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which internal user is assigned to deal with the case</inlineHelpText>
    <label>Assigned To (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>