Frankbelford/uatv1ba/force-app/main/default/objects/Case__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <inlineHelpText>When did you close this case?</inlineHelpText>
    <label>Date Closed</label>
    <type>DateTime</type>
</CustomField>