Frankbelford/uatv1ba/force-app/main/default/objects/Case__c/fields/Date_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Case__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date of Case</label>
    <type>Date</type>
</CustomField>