Frankbelford/uatv1ba/force-app/main/default/objects/Case__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>What happened?</inlineHelpText>
    <label>Description of Case</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>