Frankbelford/uatv1ba/force-app/main/default/objects/Case__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <inlineHelpText>What was done to resolve this case.</inlineHelpText>
    <label>Resolution</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>