Frankbelford/uatv1ba/force-app/main/default/objects/Case__c/recordTypes/Commendation.recordType-meta.xml
<RecordType>
    <fullName>Commendation</fullName>
    <active>true</active>
    <description>Commendation</description>
    <label>Commendation</label>
</RecordType>