Frankbelford/uatv1ba/force-app/main/default/objects/Case__c/recordTypes/Complaint.recordType-meta.xml
<RecordType>
    <fullName>Complaint</fullName>
    <active>true</active>
    <description>Complaint</description>
    <label>Complaint</label>
</RecordType>