Frankbelford/uatv1ba/force-app/main/default/objects/Case__c/recordTypes/Riddor.recordType-meta.xml
<RecordType>
    <fullName>Riddor</fullName>
    <active>true</active>
    <label>Riddor</label>
</RecordType>