Frankbelford/uatv1ba/force-app/main/default/objects/Case__c/listViews/Chat_Bot_Queue_Holiday_Balance_Case.listView-meta.xml
<ListView>
    <fullName>Chat_Bot_Queue_Holiday_Balance_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat Bot Queue - Holiday Balance</label>
    <queue>Chat_Bot_Queue_Holiday_Balance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>